# python-clean-architecture-example

./: README.md  cli.py  initial_mongo_setup.py  initial_postgres_setup.py  main.py  pyproject.toml  wsgi.py
adapter/: controller.py  input_adapter.py  output_adapter.py  post_adapter.py
data/: in_memory_post_repository.py
domain/dto/: read_post.py  write_post.py
domain/exception/: repository.py
domain/interface/: post_repository.py
domain/repository/: post_repository.py
domain/use_case/: read_post.py  read_posts.py  write_post.py
entity/: post.py
rentomatic/: __init__.py  app.py
rentomatic/domain/: room.py
rentomatic/domain/entities/: room.py
rentomatic/domain/interfaces/: repository.py
rentomatic/domain/request_objects/: room_list_request_object.py
rentomatic/domain/response_objects/: response_objects.py
rentomatic/repository/: memrepo.py  mongorepo.py  postgres_objects.py  postgresrepo.py
rentomatic/request_objects/: room_list_request_object.py
rentomatic/response_objects/: response_objects.py
rentomatic/rest/: room.py
rentomatic/serializers/: room_json_serializer.py
rentomatic/use_cases/: room_list_use_case.py
tests/: conftest.py
tests/domain/: test_room.py
tests/repository/: test_memrepo.py
tests/repository/mongodb/: conftest.py  (+1 more)
tests/request_objects/: test_room_list_request_objects.py
tests/response_objects/: test_response_objects.py
tests/rest/: test_get_rooms_list.py
tests/serializers/: room_json_serializer.py
tests/use_cases/: test_room_list_use_case.py
use_case/: read_post.py
view/web/: app.py
(+3 files in other folders)
